a bunch of styling additions

--- a/phone-south-side/src/frontend/src/components/PhoneComponent/Phone.css
+++ b/phone-south-side/src/frontend/src/components/PhoneComponent/Phone.css
@@ -34,6 +34,8 @@
 
 .phonecontainer {
   position: relative;
+  filter: grayscale(1);
+  margin-top: 10px;
 }
 
 .buttondiv {
@@ -57,6 +59,10 @@
   animation-iteration-count: 1;
   animation-timing-function: ease-in;
   animation-duration: 1s;
+}
+
+button {
+  box-shadow: 0 3px 2px #777 !important;
 }
 
 @keyframes fadeInOpacity {
@@ -109,4 +115,35 @@
   opacity: 0;
   animation-name: fadeInUp;
   -webkit-animation-name: fadeInUp;
+}
+
+/* phone vibrate when connected  */
+.vibrate {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
